# custom_crazyflie

./: .gitignore  LICENSE  README.md  TODO.md
examples/: CMakeLists.txt  README.md
examples/src/: CMakeLists.txt
examples/src/controllers/: CMakeLists.txt
examples/src/controllers/crazyflie_apriltag/: crazyflie_apriltag.lua
examples/src/controllers/crazyflie_battery/: CMakeLists.txt  crazyflie_battery.cpp  crazyflie_battery.h
examples/src/controllers/crazyflie_camera/: CMakeLists.txt  crazyflie_camera.cpp  crazyflie_camera.h
examples/src/controllers/crazyflie_led/: CMakeLists.txt  crazyflie_led.cpp  crazyflie_led.h
examples/src/controllers/crazyflie_lua/: crazyflie_lua.lua
examples/src/controllers/crazyflie_position/: CMakeLists.txt  crazyflie_position.cpp  crazyflie_position.h
examples/src/controllers/crazyflie_speed/: CMakeLists.txt  crazyflie_speed.cpp  crazyflie_speed.h
examples/src/experiments/: crazyflie_apriltag.argos  crazyflie_battery.argos  crazyflie_camera.argos  crazyflie_led.argos  crazyflie_lua.argos  crazyflie_position.argos  crazyflie_speed.argos
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/crazyflie/: CMakeLists.txt
src/plugins/robots/crazyflie/control_interface/: ci_crazyflie_apriltag_sensor.cpp  ci_crazyflie_apriltag_sensor.h
src/plugins/robots/crazyflie/simulator/: crazyflie_apriltag_default_sensor.cpp  crazyflie_apriltag_default_sensor.h  crazyflie_battery_default_sensor.cpp  crazyflie_battery_default_sensor.h  crazyflie_battery_equipped_entity.cpp  crazyflie_battery_equipped_entity.h  crazyflie_camera_equipped_entity.cpp  crazyflie_camera_equipped_entity.h  crazyflie_colored_blob_perspective_camera_default_sensor.cpp  crazyflie_colored_blob_perspective_camera_default_sensor.h  crazyflie_entity.cpp  crazyflie_entity.h  ground_apriltag_entity.cpp  ground_apriltag_entity.h  pointmass3d_crazyflie_model.cpp  pointmass3d_crazyflie_model.h  qtopengl_crazyflie.cpp  qtopengl_crazyflie.h
